# MobileBridge

./: .gitignore  android_tools.py  compile.py  envs.py  main.py  processes.py  pyproject.toml  requirements.txt  tools.py  tunnels.py
routers/: __init__.py  system.py
routers/android/: __init__.py  main.py
routers/system/: __init__.py  path.py  sprocess.py
