[tool.poetry]
name = "MobileBridge"
version = "0.1.0"
description = ""
authors = ["trojvn <mrx.trojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
colorama = "^0.4.6"
python-dotenv = "^1.0.0"
tunneller = {git = "https://gitlab.yuharan.ru/mrx/tunneller.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = "."
venv = ".venv"
